Задание 1/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-1-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: service-1
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
    - from:
        - podSelector:
            matchLabels:
              app: service-2
      ports:
        - protocol: TCP
          port: 4443
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-2-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: service-2
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: service-1
      ports:
        - protocol: TCP
          port: 4443
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
    - to:
        - ipBlock:
            cidr: <ip-address DataBase>/32
      ports:
        - protocol: TCP
          port: 5432
---
